src/objects/BG_Targets__c.object
<CustomObject>
    <description>QIPP BG_Targets</description>
    <fields>
        <fullName>Business_Group__c</fullName>
        <label>Business Group/Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Applications &amp; Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Financial Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Strategy &amp; Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Networks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP/Optical Networks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal &amp; Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing &amp; Corporate Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Networks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nokia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A&amp;A Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A&amp;A Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A&amp;A Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A&amp;AStrategy, Business Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC RBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC Regional Business Center (RBC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ &amp; India RBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applications &amp; Analytics Marketing and Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHR A&amp;A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHR CIOO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHR CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHR FN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHR Global Functions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHR ION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHR MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand and Strategy Communications</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>P10__c</fullName>
        <label>P10</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P11__c</fullName>
        <label>P11</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P12__c</fullName>
        <label>P12</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Target__c</fullName>
        <label>Total Target</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>BG Targets</label>
    <nameField>
        <displayFormat>BG-{0000}</displayFormat>
        <label>BG Target Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BG Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>